--- a/WebsNidura/appsettings.json
+++ b/WebsNidura/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-WebsNidura-65170EFE-6903-4767-BD6F-37AF477AF956;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=DESKTOP-N1UDO6A\\FELIXDB;Initial Catalog=WebsNiduraDB;Integrated Security=True"
+    //"DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=WebsNidura;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
